--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://18.221.119.99:9000/</sonar.host.url>
+		<sonar.host.url>http://http://3.135.207.193:9000//</sonar.host.url>
 
 	</properties>
 	<dependencies>
